# saros-dataset

./: .gitignore  .pre-commit-config.yaml  README.md  download.py  pyproject.toml
training/: evaluate.py  move_data.py  predict_evaluate_parts.sh  predict_evaluate_regions.sh  train_parts_2d.sh  train_regions_2d.sh  util.py
