[tool.poetry]
name = "saros-dataset"
version = "0.1.0"
description = ""
authors = ["Sven Koitka <sven.koitka@uk-essen.de>", "Giulia Baldini <giulia.baldini@uk-essen.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
requests = "^2.31.0"
SimpleITK = "^2.1.1"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
flake8 = "3.9.2"
mypy = "0.950"
black = "22.3.0"
types-requests = "^2.27.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
